// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prettier processor > should add svelte support if ui framework is svelte 1`] = `
{
  ".prettierrc.json": {
    "arrowParens": "always",
    "bracketSpacing": false,
    "overrides": [
      {
        "files": "*.svelte",
        "options": {
          "parser": "svelte",
        },
      },
    ],
    "plugins": [
      "prettier-plugin-svelte",
    ],
    "printWidth": 120,
    "semi": true,
    "singleQuote": true,
    "tabWidth": 2,
    "trailingComma": "none",
    "useTabs": false,
  },
}
`;

exports[`prettier processor > should emit mocharc and add dev dependency 1`] = `
{
  ".prettierrc.json": {
    "arrowParens": "always",
    "bracketSpacing": false,
    "printWidth": 120,
    "semi": true,
    "singleQuote": true,
    "tabWidth": 2,
    "trailingComma": "none",
    "useTabs": false,
  },
}
`;
